# coimealta

./: README.md  pyproject.toml  setup.py
contacts/: contact  contacts_data.py  format_address_labels.py  link_contacts.py  list_contacts.py
inventory/: README.md  perishables.py  runstorageserver  storage  storage-client  storage.el  storage.py
inventory/py/: storage.py  storage_client.py
src/coimealta/contacts/: contacts_data.py  family.py  link_contacts.py  list_contacts.py
src/coimealta/inventory/: books.py  perishables.py  storage.py  storage_types.py
