[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "coimealta"
authors = [{name = "John C. G. Sturdy", email = "jcg.sturdy@gmail.com"}]
description = "Contacts and inventory tracker"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"]
version = "0.0.14"
dependencies = [
  "python-decouple"
]